# paramount-media-ops-mcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  ADOBE_ACTION_PLAN.md  ADOBE_API_SETUP_GUIDE.md  ADOBE_CLOUD_INTEGRATION.md  ADOBE_EXPRESS_STRATEGY.md  ADOBE_FINAL_STRATEGY.md  ADOBE_INTEGRATION_COMPLETE.md  ADOBE_QUICKSTART.md  ADOBE_WORKAROUND.md  AI_ENHANCEMENT_PLAN.md  AI_QUICKSTART.md  API_KEYS_QUICKREF.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  ERROR_HANDLING_SUMMARY.md  FIGMA_PROMPT.md  FULLSTACK_SUMMARY.md  HACKATHON_COMPLETE.md  HACKATHON_README.md  HACKATHON_SUMMARY.md  HACKATHON_VIDEO_SCRIPT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_COMPLETED.md  INTEGRATION_COMPLETE.md  INTEGRATION_SETUP.md  LICENSE  NEWRELIC_DYNATRACE_SETUP.md  PRESENTATION_SCRIPT.md  QUICKSTART.md  QUICKSTART_DEMO.sh  QUICK_REFERENCE.md  README.md  README_FINAL.md  REFACTORING_SUMMARY.md  SECURITY.md  (+20 more)
.cursor/skills/ai-api-usage/: SKILL.md
.cursor/skills/deploy-paramount/: SKILL.md
.cursor/skills/error-debugging/: SKILL.md
.cursor/skills/paramount-ai-ops/: SKILL.md
.github/workflows/: ci.yml  test.yml
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  package.json.test-scripts  tsconfig.json  vitest.config.ts
dashboard/src/: vite-env.d.ts
dashboard/src/api/: mcpClient.ts
dashboard/src/api/__tests__/: mcpClient.test.ts
dashboard/src/app/: App.tsx
dashboard/src/app/components/: AIInsightsPanel.tsx  ChurnCohorts.tsx  ExecutiveKPIs.tsx  HelpModal.tsx  HumanReviewQueue.tsx  LoginScreen.tsx  MetricsGrid.tsx  ParamountLogo.tsx  ParetoChart.tsx  (+5 more)
dashboard/src/context/: DataProvider.tsx
dashboard/src/styles/: index.css  paramount.css  theme.css
dashboard/src/test/: setup.ts
dashboard/src/utils/: ErrorBoundary.tsx
data/: component_map.json
docs/: AI_FEATURES.md  API_EXAMPLES.md  DASHBOARD_DESIGN.md  INTEGRATION.md  RESOURCES.md  TOOLS.md  advanced_capabilities.md  architecture_overview.md  demo_narrative.md  demo_script.md  deployment_topology.md  genai_applicable_plan.md  operational_runbook.md  product_story.md  security_model.md
mcp/: __init__.py  __main__.py  server.py
mcp/ai/: __init__.py  advanced_statistics.py  anomaly_detector.py  bayesian_analytics.py  insights_generator.py  multi_agent_system.py  nlp_engine.py  predictive_analytics.py  rag_engine.py  vision_engine.py  voice_engine.py  workflow_automation.py
mcp/api/: __init__.py  adobe_exports.py  ai.py  analytics.py  chatbot.py  confluence.py  events.py  figma.py  governance.py  jira.py  mission_control.py  phase2_tools.py  rca_pipeline.py  streaming.py
mcp/chatbot/: __init__.py  ops_chatbot.py
mcp/db/: __init__.py  rca_store.py  review_store.py
mcp/decision/: __init__.py  action_selector.py  decision_engine.py  models.py  scoring.py
mcp/governance/: __init__.py  audit.py  policy.py  review_engine.py
mcp/integrations/: __init__.py  adobe_pdf_client.py  adobe_storage_client.py  analytics_client.py  atlassian_client.py  content_api.py  conviva_client.py  dynatrace_client.py  email_parser.py  figma_client.py  jira_connector.py  newrelic_client.py
mcp/middleware/: __init__.py  auth.py
mcp/mocks/: __init__.py  generate_churn_cohorts.py  generate_complaint_data.py  generate_content_catalog.py  generate_production_issues.py
mcp/models/: __init__.py  evidence_models.py  governance_models.py  rca_models.py  review_queue.py  timeline_models.py
mcp/pareto/: __init__.py  pareto_calculator.py  pareto_insights.py
mcp/pipeline/: __init__.py  orchestrator.py  stages.py
mcp/resources/: __init__.py  churn_signals.py  complaints_topics.py  content_catalog.py  international_markets.py  operational_efficiency.py  pareto_analysis.py  production_issues.py  retention_campaigns.py  revenue_impact.py
mcp/scheduler/: background_tasks.py
mcp/static/: swagger-custom.css
mcp/tools/: __init__.py  ai_summarizer.py  analyze_churn_root_cause.py  analyze_complaint_themes.py  analyze_production_risk.py  datadog_tool.py  dependency_graph.py  evidence_enricher.py  evidence_normalizer.py  forecast_revenue_with_constraints.py  generate_retention_campaign.py  newrelic_tool.py  test_generator.py  testrail_tool.py  timeline_builder.py
mcp/tools/phase2/: __init__.py  alert_tests.py  deployment_risk.py  effectiveness.py  failure_triage.py  pattern_detection.py  suite_hygiene.py  test_impact.py
mcp/utils/: __init__.py  cache.py  error_handler.py  logger.py  notifications.py  secrets_manager.py
prompts/: analyze_blast_radius.j2  generate_test_cases.j2  summarize_incident.j2
sample_data/: golden_incident.json
scripts/: api_contract_check.py  install_ai_models.sh  install_test_dependencies.sh  run_all_tests.sh  run_golden_demo.sh  seed_test_data.py  setup_atlassian.py  setup_integrations.py  test_integrations.py  ui_smoke.spec.js  ui_smoke_playwright.js
src/: __init__.py  email_parser.py  jira_connector.py  mock_data.py  pareto_engine.py  server.py
tests/: __init__.py  conftest.py  test_adobe_figma.py  test_ai_comprehensive.py  test_ai_modules.py  test_api_analytics.py  test_api_confluence.py  test_api_jira.py  test_api_streaming.py  test_coverage_boost.py  test_dynatrace.py  test_email_parser.py  test_error_handling.py  test_evidence_normalizer.py  test_integrations.py  test_integrations_comprehensive.py  test_jira_connector.py  test_mock_data.py  test_pareto.py  test_pareto_engine.py  test_pipeline.py  test_pipeline_e2e.py  test_resources.py  test_server.py  test_testrail_write.py  test_tools.py
(+24 files in other folders)
