[project]
name = "paramount-media-ops-mcp"
version = "0.1.0"
description = "AI-driven streaming operations platform with MCP server for Paramount+ media intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Paramount Media Operations Team"}
]
keywords = ["mcp", "streaming", "operations", "ai", "pareto-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.109.1",  # Security: ReDoS vulnerability patched
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "mcp>=1.23.0",  # Security: DNS rebinding, DoS vulnerabilities patched
    "anthropic>=0.7.7",
    "requests>=2.31.0",
    "httpx>=0.25.1",
    "scikit-learn>=1.3.2",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
